--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h2 class="modal__title">Contact us</h2>
                     <form action="">
                         <div class="modal__item">
-                            <input class="userName" type="text" placeholder="Ваше иммя">
+                            <input class="userName" type="text" placeholder="Ваше имя">
                         </div>
                         <div class="modal__item">
                             <input class="userMail" type="email" placeholder="Электронная почта">
